fixing mobile view

--- a/page1_food.html
+++ b/page1_food.html
@@ -97,7 +97,7 @@
       <div>
         <p class="page-info">
           <img
-            class="page-pic"
+            class="page-pic img-fluid"
             src="foodPic.png"
             alt="A chipmunk sad because it it hungry."
           />
