Adding snacks and indri

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
             >
               <img
-                src="downtownPic.png"
+                src="snacksPic.png"
                 alt="This is a picture of a chipmunk being hungry."
               />
             </div></div
