--- a/page5_snacks.html
+++ b/page5_snacks.html
@@ -36,7 +36,7 @@
       <a href="index.html">
         <img
           class="nav-signature-pic"
-          src="signature.png"
+          src="snacksPic.png"
           alt="A chipmunk sad because it it hungry."
         />
       </a>
@@ -91,7 +91,7 @@
       </div>
     </nav>
 
-    <h1 class="page-title">Food</h1>
+    <h1 class="page-title">Snacks</h1>
 
     <div>
       <div>
