--- a/page2_chill.html
+++ b/page2_chill.html
@@ -97,7 +97,7 @@
       <div>
         <p class="page-info">
           <img
-            class="page-pic img-fluid"
+            class="page-pic"
             src="chillPic.png"
             alt="A chipmunk sad because it it hungry."
           />
