added all images

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
             >
               <img
-                src="registrarPic.png"
+                src="appsPic.png"
                 alt="This is a picture of a chipmunk being hungry."
               />
             </div></div
