--- a/page5_snacks.html
+++ b/page5_snacks.html
@@ -56,7 +56,7 @@
                   </svg>
                 </a>
               </li>
-              <li class="current-page nav-item"><a class="nav-link" href="page1_food.html">Food</a></li>
+              <li class="nav-item"><a class="nav-link" href="page1_food.html">Food</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="page2_chill.html">Places to Relax</a>
               </li>
@@ -66,7 +66,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="page4_downtown.html">Town</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="page5_snacks.html">Snacks</a></li>
+              <li class="current-page nav-item"><a class="nav-link" href="page5_snacks.html">Snacks</a></li>
               <li class="nav-item"><a class="nav-link" href="page6_study.html">Study</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="page7_registrar.html">Registrar</a>
