adding last image

--- a/page5_snacks.html
+++ b/page5_snacks.html
@@ -98,7 +98,7 @@
         <p class="page-info">
           <img
             class="page-pic"
-            src="foodPic.png"
+            src="snacksPic.png"
             alt="A chipmunk sad because it it hungry."
           />
           <h2 class="page-info-title">Official Page</h2>
