--- a/page5_snacks.html
+++ b/page5_snacks.html
@@ -36,7 +36,7 @@
       <a href="index.html">
         <img
           class="nav-signature-pic"
-          src="snacksPic.png"
+          src="signature.png"
           alt="A chipmunk sad because it it hungry."
         />
       </a>
