--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
             <div class="my-3 py-3">
               <h2 class="display-5">TOWN</h2>
               <p class="lead">
-                When you're alone and life is making you lonely, you can always
-                go...DOWNTOWN!
+                Let's have fun! There is more than just studying.
               </p>
             </div>
             <div
