--- a/page5_snacks.html
+++ b/page5_snacks.html
@@ -101,32 +101,17 @@
             src="snacksPic.png"
             alt="A chipmunk sad because it it hungry."
           />
-          <h2 class="page-info-title">Official Page</h2>
+          <h2 class="page-info-title">Chobani</h2>
           <div class="page-info">
-            Colgate's Dining Services - Official page:
-          <a
-            href="https://www.colgate.edu/student-life/housing-and-dining/dining-campus"
-            class="button-like"
-            >here</a
-          >.
+            Contains a wide arrange of snack options located on the 5th floor of Case-Geyer library. <br> Perfect for when you are studying! 
           </div>
-          <h2 class="page-info-title">Meal Plans</h2>
+          <h2 class="page-info-title">Frank Dining Hall</h2>
           <div class="page-info">
-            Colgate's Meal Plan Options - Official page:
-          <a
-            href="https://www.colgate.edu/about/campus-services-and-resources/meal-plans"
-            class="button-like"
-            >here</a
-          >.
+            Using 1 meal swipe, you can get all sorts of snacks, pastries, food, and more!
           </div>
-          <h2 class="page-info-title">Need a meal?</h2>
+          <h2 class="page-info-title">Dean's Office</h2>
           <div class="page-info">
-            Students who need meals can apply for emergency support by filling out this request form:
-          <a
-            href="https://forms.gle/dxKYGp3R11BTk4u97"
-            class="button-like"
-            >here</a
-          >.
+            Located in Mcgregory, the Dean's office holds a variation of snacks and drinks for students. <br> Drop by and grab some snacks and even chat with your dean about anything!
           </div>
         </p>
       </div>
