--- a/page10_mobileapps.html
+++ b/page10_mobileapps.html
@@ -101,32 +101,46 @@
             src="appsPic.png"
             alt="A chipmunk sad because it it hungry."
           />
-          <h2 class="page-info-title">Official Page</h2>
+          <h2 class="page-info-title">"Colgate Mobile"</h2>
           <div class="page-info">
-            Colgate's Dining Services - Official page:
-          <a
-            href="https://www.colgate.edu/student-life/housing-and-dining/dining-campus"
-            class="button-like"
-            >here</a
-          >.
+            - Cruiser Updates <br>
+            - Dining Information <br>
+            - Campus Events Calendar <br>
+            - Laundry: empty/full washer and dryer updates <br>
+            - Library Information 
           </div>
-          <h2 class="page-info-title">Meal Plans</h2>
+          <h2 class="page-info-title">"DoorDash"</h2>
           <div class="page-info">
-            Colgate's Meal Plan Options - Official page:
-          <a
-            href="https://www.colgate.edu/about/campus-services-and-resources/meal-plans"
-            class="button-like"
-            >here</a
-          >.
+            - Craving different food? Order with DoorDash!
           </div>
-          <h2 class="page-info-title">Need a meal?</h2>
+          <h2 class="page-info-title">"Instacart"</h2>
           <div class="page-info">
-            Students who need meals can apply for emergency support by filling out this request form:
-          <a
-            href="https://forms.gle/dxKYGp3R11BTk4u97"
-            class="button-like"
-            >here</a
-          >.
+            - As a college student, your schedule becomes busy and sometimes that leaves no time for grocery shopping. <br> No worries! Order with Instacart!
+          </div>
+          <h2 class="page-info-title">"GET Mobile"</h2>
+          <div class="page-info">
+            - Online Gate Calendar <br>
+            - Gate Cash balance <br>
+            - Flex Cash balance <br>
+            - Meal Plan Balance <br>
+            - Transactions History <br>
+            - Donate a Meal! <br>
+            - Add funds
+          </div>
+          <h2 class="page-info-title">"TransLoc"</h2>
+          <div class="page-info">
+            - Cruiser schedules and current movements
+          </div>
+          <h2 class="page-info-title">"Boost"</h2>
+          <div class="page-info">
+            - Chobani Online Ordering <br>
+            - Donovan's Pub Online Ordering <br>
+            - Coop Smoothies Ordering <br>
+            - Coop Deline Ordering 
+          </div>
+          <h2 class="page-info-title">"Blood Donor"</h2>
+          <div class="page-info">
+            - Every semester, colgate holds blood banks with American Red Cross. <br>If you would like to be a donor, this app is for you!
           </div>
         </p>
       </div>
