--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             class="bg-body-tertiary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden"
           >
             <div class="my-3 p-3">
-              <h2 class="display-5">CHILL</h2>
-              <p class="lead">Enough school. How about a place to chill?</p>
+              <h2 class="display-5">RELAX</h2>
+              <p class="lead">Enough school. How about a place to relax?</p>
             </div>
             <div
               class="bg-dark shadow-sm mx-auto"
