--- a/index.html
+++ b/index.html
@@ -292,7 +292,9 @@
           >
             <div class="my-3 p-3">
               <h2 class="display-5">MOBILE APPS</h2>
-              <p class="lead">Questions about your academics? Reach out!</p>
+              <p class="lead">
+                It's not easy navigating a new place. Here is some help!
+              </p>
             </div>
             <div
               class="bg-dark shadow-sm mx-auto"
